--- a/index.html
+++ b/index.html
@@ -476,6 +476,8 @@
                  this.company_brand = data.data.company_brand;
                  this.message_header = data.data.message_header;
                 this.message_body = data.data.message_body;
+                this.email_footer = data.data.email_footer;
+                this.download_text = data.data.download_text;
               }
               
             });
