--- a/index.html
+++ b/index.html
@@ -467,17 +467,17 @@
             console.log("this one is always awesome !");
             //now do the remaining stuff here please.
           
-            fetch(`https://app.sellkite.xyz/api/v1/email/settings/${store_url}`)
+            fetch(`https://app.sellkite.xyz/api/v1/preview/?store=${store_url}`)
             .then((response) => response.json())
             .then((data) => {
                 console.log(data)
               if(data.status == 'success'){
-                 this.company_logo = data.data.company_logo;
-                 this.company_brand = data.data.company_brand;
-                 this.message_header = data.data.message_header;
-                this.message_body = data.data.message_body;
-                this.email_footer = data.data.email_footer;
-                this.download_text = data.data.download_text;
+                 this.company_logo = data.data.email_settings.company_logo;
+                 this.company_brand = data.data.email_settings.company_brand;
+                 this.message_header = data.data.email_settings.message_header;
+                this.message_body = data.data.email_settings.message_body;
+                this.email_footer = data.data.email_settings.email_footer;
+                this.download_text = data.data.email_settings.download_text;
               }
               
             });
