--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div id="vue-app">
 
   <div style="display:none;font-size:1px;color:#ffffff;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">  </div>
-  <div style="background-color:#eaeaea;">
+  <div :style="{ backgroundColor: email_header_color }">
 
     <div style="margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
@@ -430,6 +430,7 @@
             message_header:"Hey , Thanks a lot for your order ! ",
             message_body:"If you need any help with downloads , Feel free to let me know , I am here :) ",
             download_url:"https://google.com",
+            email_header_color:"",
             download_text:"Download Your Downloads",
             email_footer:"Feel free to mail me for anything !",
             order_amount:"$455",
@@ -478,6 +479,7 @@
                 this.message_body = data.data.email_settings.message_body;
                 this.email_footer = data.data.email_settings.email_footer;
                 this.download_text = data.data.email_settings.download_text;
+                this.email_header_color = data.data.page_settings.header_background_color;
               }
               
             });
