--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div id="vue-app">
 
   <div style="display:none;font-size:1px;color:#ffffff;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">  </div>
-  <div :style="{ backgroundColor: email_header_color }">
+  <div style="background-color:#eaeaea;">
 
     <div style="margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
