--- a/index.html
+++ b/index.html
@@ -424,15 +424,15 @@
         delimiters: ["{{", "}}"],
         el: '#vue-app',
         data: {
-            company_brand_url:"https://google.com",
-            company_logo:"https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png",
-            company_brand:"Google",
-            message_header:"Hey , Thanks a lot for your order ! ",
-            message_body:"If you need any help with downloads , Feel free to let me know , I am here :) ",
-            download_url:"https://google.com",
+            company_brand_url:"",
+            company_logo:"",
+            company_brand:"",
+            message_header:"",
+            message_body:"",
+            download_url:"#",
             email_header_color:"",
-            download_text:"Download Your Downloads",
-            email_footer:"Feel free to mail me for anything !",
+            download_text:"",
+            email_footer:"",
             order_amount:"$455",
             order_no:"1233",
             email_date:"11 Aug 2022",
