--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </table>
     </div>
 
-    <div style="background:url(https://images.unsplash.com/photo-1535551951406-a19828b0a76b?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=800&amp;q=80) top center / cover no-repeat;margin:0px auto;border-radius:20px 20px 0 0;max-width:600px;">
+    <div style="margin:0px auto;border-radius:20px 20px 0 0;max-width:600px;">
       <div style="line-height:0;font-size:0;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" :style="{'width': '100%', 'border-radius': '20px 20px 0 0', 'background-color': email_header_color}">
           <tbody>
