--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       mso-table-rspace: 0pt;
     }
 
-    img {
+    .companyLogo {
       border: 0;
       height: auto;
       line-height: 100%;
@@ -143,7 +143,7 @@
                           <tbody>
                             <tr>
                               <td style="width:150px;">
-                                <a :href="company_brand_url" target="_blank"><img height="auto" :src="company_logo" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:16px;" width="150" /></a>
+                                <a :href="company_brand_url" target="_blank"><img class="companyLogo" height="auto" :src="company_logo" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:16px;" width="150" /></a>
                               </td>
                             </tr>
                           </tbody>
