--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                   </tr>
                   <tr>
                     <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                      <div style="font-family:'Noto Sans', sans-serif;font-size:16px;font-weight:400;line-height:20px;text-align:left;color:#54595f;">
-                        <p style="margin: 0 0 5px 0;">{{message_body}} </p>
+                      <div style="font-family:'Noto Sans', sans-serif;font-size:16px;font-weight:400;line-height:20px;text-align:left;color:#54595f;" v-html="message_body">
+<!--                         <p style="margin: 0 0 5px 0;">{{message_body}} </p> -->
                       </div>
                     </td>
                   </tr>
