--- a/index.html
+++ b/index.html
@@ -234,8 +234,7 @@
                                            <table class="paragraph_block block-5" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
                                               <tr>
                                                  <td class="pad" style="padding:15px;">
-                                                    <div :style="`color:${header_font_color};font-family:Noto Sans, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;font-size:15px;line-height:180%;text-align:center;mso-line-height-alt:27px;`">
-                                                       {{message_body}}
+                                                    <div v-html="message_body" :style="`color:${header_font_color};font-family:Noto Sans, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;font-size:15px;line-height:180%;text-align:center;mso-line-height-alt:27px;`">
                                                     </div>
                                                  </td>
                                               </tr>
